# screen-capture-kit-rs

./: Cargo.toml  README.md
examples/: screen_capture.rs
src/: encode.rs  error.rs  lib.rs  shareable_content.rs  stream.rs
